refacto pour différencier le cas où l'utilisateur est déjà abonné de celui d'un nouvel abonné. A chaque fois, une notification push est envoyée par le serveur et interceptée par le sw

--- a/client/index.html
+++ b/client/index.html
@@ -22,10 +22,11 @@
 
   <div class="buttons">
     <p>Le tout en un puisque le bouton ci-dessous vaut acceptation des notifications et déclenche l'envoi d'une notification pour l'exemple</p>
+    <p>Si l'utilisateur est déjà abonné, il reçoit une notification push pour rappel !</p>
     <button class="trigger-push">Déclencher une notification</button>
   </div>
 
-  <script src="main.js"></script>
+  <script src="main2.js"></script>
 </body>
 </html>
 
