--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,11 @@
     <button class="trigger-push">Déclencher une notification</button>
   </div>
 
+  <div class="container">
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reiciendis nobis, repellat nulla laudantium eum facilis consequuntur iusto dolores quod mollitia adipisci quam optio natus odio id? Facilis, nostrum ullam?</p>
+  </div>
+
   <script src="main2.js"></script>
 </body>
 </html>
