Ajout handler on activate sw et ajustements pour rapport Lighthouse

--- a/client/offline.html
+++ b/client/offline.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>Web Push Notifications Demo</h1>
+    <h1>Web Push Notifications Demo : Version Offline</h1>
   </header>
 
   <div class="buttons">
