Détection et Affichage en Offline de la data depuis localStorage à l'identique de la data Online : utilisation de localSotage.getItem en lieu et place de data

--- a/client/offline.html
+++ b/client/offline.html
@@ -20,6 +20,8 @@
     <button class="trigger-push">Déclencher une notification</button>
   </div>
 
+  <div class="container"></div>
+
   <script src="main2.js"></script>
 </body>
 </html>
